basic party api filled in
